--- a/algorithms/라이브러리 알고리즘.md
+++ b/algorithms/라이브러리 알고리즘.md
@@ -1,11 +1,12 @@
 # 라이브러리 기능 구현하기
 
->  애너그램
-> 특정 단어와 단어의 목록이 주어진다. 단어의 목록 중에서 특정 단어의 애너그램에 해당하는 단어목록을 모두 구하라. 
+## 애너그램(Anagram)
+
+특정 단어와 단어의 목록이 주어진다. 단어의 목록 중에서 특정 단어의 애너그램에 해당하는 단어목록을 모두 구하라. 
 
 애너그램은 단어의 절차를 재배열해서 다른 단어를 만드는 것을 말한다. 규칙은 글자를 삭제해서는 안된다는 것과 멀리 가져다 놓는 것은 가능하다는 것이다.
 
-한 단어의 가능한 어떤 애너그램도 정렬을 하면 모두 같은 단어가 된다. 
+**애너그램의 중요한 성질은 특정 단어가 만들 수 있는 모든 어떤 애너그램도 정렬을 하면 모두 같은 단어가 된다.** 
 ```
 given a word : w, list of string : L
 sortedWord = sw;
@@ -42,5 +43,5 @@ function improvedReverse(String input){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg2MDcyMjg4M119
+eyJoaXN0b3J5IjpbMTc3NDc5Njg3MCwtODYwNzIyODgzXX0=
 -->
