books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -41,7 +41,7 @@
 
 > Spring Batch?
 
-스프링 배치는 **배치 처리를위한 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
+스프링 배치는 **배치 처리를 위한 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
 
 * 처리 흐름을 정형화 
 	* 단순한 형태의 Tasklet 방식
@@ -278,11 +278,11 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcyNjc3NzIsNTA3MTQ5NTY2LC0xNDI0ND
-gxNjg5LC02OTU0OTQwNDEsNTk2OTM3NDg1LC0yMDI4NjU1ODQz
-LDE3NzI5NjkzODYsMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMz
-A0NjMzNDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAy
-NDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMz
-k2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0x
-MTExNjYxOTE0XX0=
+eyJoaXN0b3J5IjpbMzQwMjAyNzU4LDUwNzE0OTU2NiwtMTQyND
+Q4MTY4OSwtNjk1NDk0MDQxLDU5NjkzNzQ4NSwtMjAyODY1NTg0
+MywxNzcyOTY5Mzg2LDE3NzU4NzE5NjksMTMwODI1Njk3MSwtMT
+MwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEw
+MjQ0NTgsLTEyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMT
+M5Niw5MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwt
+MTExMTY2MTkxNF19
 -->
