books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -217,7 +217,7 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Split 방식
 
-스플릿 방식은 스레드 별로 처리해야할 스텝을 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다.  병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
+스플릿 방식은 처리해야할 스텝을 여러 스레드로 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다.  병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
 
 기본적으로 어느 한 스레드에서 예외가 발생하는 경우 다른 스레드에서 실행되는 스텝에는 영향을 주지 않지만, 병렬 처리가 끝난 이후에 스텝은 실행되지 않고 비정상적으로 종료하게 된다.
 
@@ -239,7 +239,9 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Partition 방식
 
-파티션 방식은 하나의 스텝을 병렬처리 할때 사용한다. 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스텝에서 처리할 데이터 갯수를 grid-size 속성으로 조절할 수 있다. 그래서 대량의 데이터를 분할해서 병렬 처리해야한다면 파티션 방식이 적합하다. 
+파티션 방식은 **하나의 스텝을 병렬처리 할때 사용한다.** 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스텝에서 처리할 데이터 갯수를 grid-size 속성으로 조절할 수 있다. 그래서 대량의 데이터를 분할해서 병렬 처리해야한다면 파티션 방식이 적합하다. 
+
+![enter image description here](https://i.stack.imgur.com/nwGPy.jpg)
 
 Split 방식과 비슷하게 어느 한 스레드가 비정상적으로 종료되어도 다른 스텝에는 영향을 주지않는다. 다만 병렬처리가 끝난 후 스텝은 실행되지 않고 잡은 비정상적으로 종료하게 된다. 
 
@@ -278,11 +280,11 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQwMjAyNzU4LDUwNzE0OTU2NiwtMTQyND
-Q4MTY4OSwtNjk1NDk0MDQxLDU5NjkzNzQ4NSwtMjAyODY1NTg0
-MywxNzcyOTY5Mzg2LDE3NzU4NzE5NjksMTMwODI1Njk3MSwtMT
-MwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEw
-MjQ0NTgsLTEyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMT
-M5Niw5MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwt
-MTExMTY2MTkxNF19
+eyJoaXN0b3J5IjpbLTE3NjUzODI2NTUsMzQwMjAyNzU4LDUwNz
+E0OTU2NiwtMTQyNDQ4MTY4OSwtNjk1NDk0MDQxLDU5NjkzNzQ4
+NSwtMjAyODY1NTg0MywxNzcyOTY5Mzg2LDE3NzU4NzE5NjksMT
+MwODI1Njk3MSwtMTMwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0
+Njk3MjMsLTE4MjEwMjQ0NTgsLTEyOTg4NzI5NDIsMTU1ODg0OT
+Y4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0NTM1Miwt
+MjExMjg4MDk4NF19
 -->
