books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -217,7 +217,7 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Split 방식
 
-스플릿 방식은 다수의 스텝을 여러 스레드로 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다. 서로 독립적인 스텝을
+스플릿 방식은 다수의 스텝을 여러 스레드로 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다. 서로 독립적인 스텝을 여러 스레드로 나누어 처리할 수도 있다. 
 
 병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
 
@@ -282,7 +282,7 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDk0NjAwMzMsMzQwMjAyNzU4LDUwNz
+eyJoaXN0b3J5IjpbLTE1NTkzNTE5NzUsMzQwMjAyNzU4LDUwNz
 E0OTU2NiwtMTQyNDQ4MTY4OSwtNjk1NDk0MDQxLDU5NjkzNzQ4
 NSwtMjAyODY1NTg0MywxNzcyOTY5Mzg2LDE3NzU4NzE5NjksMT
 MwODI1Njk3MSwtMTMwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0
