--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -219,6 +219,8 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 스플릿 방식은 다수의 스텝을 여러 스레드로 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다. 서로 독립적인 스텝을 여러 스레드로 나누어 처리할 수도 있다. 
 
+
+
 병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
 
 기본적으로 어느 한 스레드에서 예외가 발생하는 경우 다른 스레드에서 실행되는 스텝에는 영향을 주지 않지만, 병렬 처리가 끝난 이후에 스텝은 실행되지 않고 비정상적으로 종료하게 된다.
@@ -282,11 +284,11 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTkzNTE5NzUsMzQwMjAyNzU4LDUwNz
-E0OTU2NiwtMTQyNDQ4MTY4OSwtNjk1NDk0MDQxLDU5NjkzNzQ4
-NSwtMjAyODY1NTg0MywxNzcyOTY5Mzg2LDE3NzU4NzE5NjksMT
-MwODI1Njk3MSwtMTMwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0
-Njk3MjMsLTE4MjEwMjQ0NTgsLTEyOTg4NzI5NDIsMTU1ODg0OT
-Y4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0NTM1Miwt
-MjExMjg4MDk4NF19
+eyJoaXN0b3J5IjpbLTk0MjE4NjI0MywtMTU1OTM1MTk3NSwzND
+AyMDI3NTgsNTA3MTQ5NTY2LC0xNDI0NDgxNjg5LC02OTU0OTQw
+NDEsNTk2OTM3NDg1LC0yMDI4NjU1ODQzLDE3NzI5NjkzODYsMT
+c3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMzNDE5LC0yNzE1
+ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5ODg3Mj
+k0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOCwx
+NzQ2ODQ1MzUyXX0=
 -->
