books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -219,7 +219,7 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 스플릿 방식은 다수의 스텝을 여러 스레드로 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다. 서로 독립적인 스텝을 여러 스레드로 나누어 처리할 수도 있다. 
 
-
+![enter image description here](https://image.slidesharecdn.com/spring-batch-2-0-091229132545-phpapp02/95/spring-batch-20-25-728.jpg?cb=1262093594)
 
 병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
 
@@ -284,7 +284,7 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0MjE4NjI0MywtMTU1OTM1MTk3NSwzND
+eyJoaXN0b3J5IjpbMTgwMDIxNzc5OSwtMTU1OTM1MTk3NSwzND
 AyMDI3NTgsNTA3MTQ5NTY2LC0xNDI0NDgxNjg5LC02OTU0OTQw
 NDEsNTk2OTM3NDg1LC0yMDI4NjU1ODQzLDE3NzI5NjkzODYsMT
 c3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMzNDE5LC0yNzE1
