books/코어자바스크립트/클래스.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -1,7 +1,13 @@
-# 클래스와 ㅇ
+# Overview
+
+자바스크립트는 프로토 타입 기반의 언어라 상속 개념이 존재하지 않는다. 이는 클래스 기반의 다른 언어에 익숙한 개발자를 혼란스럽게 했고, 클래스와 비슷하게 동작하는 여러 기법들이 탄생했다. 
+
+
+
+# 클래스와 인스턴스 개념
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2OTE5MTAwOF19
+eyJoaXN0b3J5IjpbLTEwMTM5OTcwM119
 -->
