books/코어자바스크립트/클래스.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -1,13 +1,15 @@
 # Overview
 
 자바스크립트는 프로토 타입 기반의 언어라 상속 개념이 존재하지 않는다. 이는 클래스 기반의 다른 언어에 익숙한 개발자를 혼란스럽게 했고, 클래스와 비슷하게 동작하는 여러 기법들이 탄생했다. 
-
+결국 이러한 요구에 따라 ES6에서는 클래스 문법이 추가되었다. 하지만 ES6 클래스에서도 일정 부분은 프로토 타입을 활용하고 있다.
 
 
 # 클래스와 인스턴스 개념
 
 
+
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTM5OTcwM119
+eyJoaXN0b3J5IjpbMTg0MDk3OTE1Ml19
 -->
