--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -8,11 +8,11 @@
 
 자바스크립트는 프로토타입 기반의 언어이므로 클래스의  개념이 존재 하지 않는다. 
 
-생성자 함수 Array를 new 연산자와 함께 호출하면 인스턴스가 생성된다. 이때 Array를 일종의 클래스라고 하면, Array의 prototype 객체 내부 요소들이 인스턴스에 상속된다고 볼 수 있다. 엄밀히는 상속이 아닌 prototype 체이닝에 의한 차
+생성자 함수 Array를 new 연산자와 함께 호출하면 인스턴스가 생성된다. 이때 Array를 일종의 클래스라고 하면, Array의 prototype 객체 내부 요소들이 인스턴스에 상속된다고 볼 수 있다. 엄밀히는 상속이 아닌 prototype 체이닝에 의한 참조지만 결과적으로는 동일하게 동작한다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4MjQ4NDc2NCwxODQwOTc5MTUyXX0=
+eyJoaXN0b3J5IjpbLTExNTg1NjAzNzAsMTg0MDk3OTE1Ml19
 -->
