--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -14,9 +14,12 @@
 
 클래스의 prototype 내부에 정의된 메서드를 프로토타입 메서드라고 하며, 이들은 인스턴스가 마치 자신의 것처럼 호출할 수 있다. 
 
+한편 클래스(생성자 함수)에 직접 정의한 메서드를 스태틱 메서드라고하며, 이들은 인스턴스가 직접 호출할수 없고 클래스(생성자 함수)에 의해서만 호출할 수 있다. 
+
+사실 클래스는 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEwNDE4NzIwMSwxODQwOTc5MTUyXX0=
+eyJoaXN0b3J5IjpbLTE2NDY0NTYxMywxODQwOTc5MTUyXX0=
 -->
