books/코어자바스크립트/클래스.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -12,7 +12,7 @@
 
 # Constructor Property
 
-생성자 함수의 프로퍼티인 prototype 객체 내부에는 constructor라는 프로퍼티가 있다. 인스턴스의 __proto__ 객체내부에도 마차가지이다. 
+생성자 함수의 프로퍼티인 prototype 객체 내부에는 constructor라는 프로퍼티가 있다. 인스턴스의 __proto__ 객체내부에도 마차가지이다. dl vmfhvj
 
 
 
@@ -27,6 +27,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTM5Mzc2NzA5LC02NTEyMjYyNjMsLTE3NT
-A4MDY4MzksMTg0MDk3OTE1Ml19
+eyJoaXN0b3J5IjpbLTEyMjM5NTA1OTIsLTY1MTIyNjI2MywtMT
+c1MDgwNjgzOSwxODQwOTc5MTUyXX0=
 -->
