books/코어자바스크립트/클래스.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -14,7 +14,9 @@
 
 생성자 함수의 프로퍼티인 prototype 객체 내부에는 constructor라는 프로퍼티가 있다. 인스턴스의 __proto__ 객체내부에도 마차가지이다. 이 프로퍼티는 단어 그대로 원래 생성자 함수(자기자신)을 참조한다. 자신을 참조하는 프로퍼티를 굳이 뭐하러 가지고 있을가 싶지만, 이 역시 인스턴스와 관계에 있어 필요한 정보다. **인스턴스로부터 그 원형이 무엇인지를 알 수 있는 수단이기 때문이다.**
 
+# 특정 클래스가 구체적 데이터를 지니지 않게 하는 방법
 
+클래스(prototype)이 구체적인
 
 
 
@@ -29,6 +31,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDg5MDQ1ODUsLTY1MTIyNjI2MywtMT
+eyJoaXN0b3J5IjpbLTE2ODQ0NDIyNjEsLTY1MTIyNjI2MywtMT
 c1MDgwNjgzOSwxODQwOTc5MTUyXX0=
 -->
