--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -16,7 +16,10 @@
 
 # 특정 클래스가 구체적 데이터를 지니지 않게 하는 방법
 
-클래스(prototype)이 구체적인
+클래스(prototype)이 구체적인 데이터를 지니지 않게 하는 방법
+
+가장 쉬운 방법은 만들고 나서 프로퍼티들을 일일이 지우고 더 새로운 프로퍼티를 추가할 수 없게 하는 것이다. 
+
 
 
 
@@ -31,6 +34,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODQ0NDIyNjEsLTY1MTIyNjI2MywtMT
+eyJoaXN0b3J5IjpbLTEwMTQ3Nzg1NTUsLTY1MTIyNjI2MywtMT
 c1MDgwNjgzOSwxODQwOTc5MTUyXX0=
 -->
