--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -20,9 +20,14 @@
 
 가장 쉬운 방법은 만들고 나서 프로퍼티들을 일일이 지우고 더 새로운 프로퍼티를 추가할 수 없게 하는 것이다. 
 
+## Constructor 복구하기
 
-
-
+클래스 상속 및 추상화
+```
+Square.prototype = Object.create(Rectangle.prototype);
+Object.freeze(Sqaure.prototype)
+//
+```
 
 # 정리 
 
@@ -34,6 +39,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMTQ3Nzg1NTUsLTY1MTIyNjI2MywtMT
-c1MDgwNjgzOSwxODQwOTc5MTUyXX0=
+eyJoaXN0b3J5IjpbLTk0MzM4MDQxOCwtMTAxNDc3ODU1NSwtNj
+UxMjI2MjYzLC0xNzUwODA2ODM5LDE4NDA5NzkxNTJdfQ==
 -->
