books/코어자바스크립트/클래스.md updated from https://stackedit.io/

--- a/books/코어자바스크립트/클래스.md
+++ b/books/코어자바스크립트/클래스.md
@@ -35,10 +35,9 @@ Object.freeze(Sqaure.prototype)
 
 한편 클래스(생성자 함수)에 직접 정의한 메서드를 스태틱 메서드라고하며, 이들은 인스턴스가 직접 호출할수 없고 클래스(생성자 함수)에 의해서만 호출할 수 있다. 
 
-
-
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0MzM4MDQxOCwtMTAxNDc3ODU1NSwtNj
-UxMjI2MjYzLC0xNzUwODA2ODM5LDE4NDA5NzkxNTJdfQ==
+eyJoaXN0b3J5IjpbLTE4MTExODc2MTQsLTk0MzM4MDQxOCwtMT
+AxNDc3ODU1NSwtNjUxMjI2MjYzLC0xNzUwODA2ODM5LDE4NDA5
+NzkxNTJdfQ==
 -->
