--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -1,4 +1,4 @@
-# 쓰레드 이용하기 
+# Introduction
 
 모든 애플리케이션은 최소한 하나의 스레드는 가지고 있어야 한다. 
 직접 스레드를 만들 수 도 있는데 새로운 스레드를 만들때 마다 코드는 해당 스레드에서 즉시 실행된다. 
@@ -71,5 +71,5 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
 -->
