--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -11,7 +11,9 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 ## Executor Framework
 
-자바 4에서 도입된 동시성 프레임워크(Executor Framework)는 동시성을 위한 클래스들을 제공했는데 자바의 스레드 모델을 이용하는데 큰 도움을 주었다. Executor 프레임웍은 다음과 같은 특징을 지닌다.
+동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 
+
+동시성을 위한 클래스들을 제공했는데 자바의 스레드 모델을 이용하는데 큰 도움을 주었다. Executor 프레임워크는 다음과 같은 특징을 지닌다.
 
 -   쓰레드 풀을 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
@@ -71,5 +73,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbMTg3Mjk1MDQ5Niw1NTk5MjkxMTMsMTMzOD
+k1MzQ0MF19
 -->
