--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -13,11 +13,11 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 동시성을 위한 여러 클래스들을 제공한다. 이는 자바의 스레드 모델을 이용하는데 큰 도움을 주었다. 
 
--   쓰레드 풀을 사용(무거운 쓰레드는 미리 할당 가능)
+-   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
 	- 태스크(task == Runnable 한 구현체)
 -   쓰레드 풀안의 쓰레드는 한번에 하나씩 여러 태스크를 실행
--   태스크 큐를 이용해 태스크 관리
+-   태스크 큐를 이용한 태스크 관리
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
@@ -71,6 +71,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk1Mjc5MjQ2OCw1NTk5MjkxMTMsMTMzOD
+eyJoaXN0b3J5IjpbMTE4MTU3Mzk3OCw1NTk5MjkxMTMsMTMzOD
 k1MzQ0MF19
 -->
