information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -11,7 +11,13 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 ## Executor Framework
 
-동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 동시성을 위한 여러 클래스들을 제공한다. 이는 자바의 스레드 모델을 이용하는데 큰 도움을 주었다. 
+동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 **메모리 측면에서의 효율성 있는 동시성을 위한 여러 클래스**들을 제공한다. 
+
+스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를
+
+재사용함으로써 자원을 효율성을 높여주고 있다.
+
+
 
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
@@ -71,6 +77,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4MTU3Mzk3OCw1NTk5MjkxMTMsMTMzOD
-k1MzQ0MF19
+eyJoaXN0b3J5IjpbLTE3Nzg2NjMyOTQsNTU5OTI5MTEzLDEzMz
+g5NTM0NDBdfQ==
 -->
