--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -13,11 +13,13 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 **메모리 측면에서의 효율성 있는 동시성을 위한 여러 클래스**들을 제공한다. 
 
-스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를
+스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 자원을 효율성을 높인다. 
 
-재사용함으로써 자원을 효율성을 높여주고 있다.
-
-
+Runnable 객체(태스크)의 실행을 execute 메서드로 추상화 정의
+```
+public interface Executor
+void execute(Runnable task);
+```
 
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
@@ -27,10 +29,8 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
-Executor 인터페이스
-: 주어진 Runnable객체(태스크)의 실행을 execute 메서드로 추상화 정의
-```
-void execute(Runnable task);
+
+
 ```
 Executor Service
 : Executor 인터페이스를 확장하며 쓰레드 라이프 사이클을 제어
@@ -77,6 +77,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3Nzg2NjMyOTQsNTU5OTI5MTEzLDEzMz
-g5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTQxNzcwOTIyNCw1NTk5MjkxMTMsMTMzOD
+k1MzQ0MF19
 -->
