--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -15,10 +15,11 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 자원을 효율성을 높인다. 
 
-Runnable 객체(태스크)의 실행을 execute 메서드로 추상화 정의
+Runnable 객체(태스크)의 실행을 추상 메서드 정의(execute())
 ```
-public interface Executor
-void execute(Runnable task);
+public interface Executor {
+	void execute(Runnable task);
+}
 ```
 
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
@@ -77,6 +78,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQxNzcwOTIyNCw1NTk5MjkxMTMsMTMzOD
+eyJoaXN0b3J5IjpbLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzOD
 k1MzQ0MF19
 -->
