information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -31,7 +31,7 @@ public interface Executor {
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
 Executor Service
-: Executor 인터페이스를 확장하며 쓰레드 라이프 사이클을 제어
+: 라이프 사이클을 제어하며, Executor 인터페이스를 확장한다. 
 
 Executors 클래스
 : 다양한 Executor Service 인스턴스를 생성하는 Excecutor Service의  Factory 클래스.
@@ -75,6 +75,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODczNjY4Mjg4LC04NTk5NjEyMzAsNTU5OT
-I5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTE2MDE4MjIxMzAsLTg1OTk2MTIzMCw1NT
+k5MjkxMTMsMTMzODk1MzQ0MF19
 -->
