--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -20,7 +20,18 @@ Runnable 객체(태스크)의 실행을 추상 메서드 정의(execute())
 public interface Executor {
 	void execute(Runnable task);
 }
+interface ExecutorService extends Executor {
+	void execute(Runnable task);
+}
+
 ```
+
+
+
+
+Executor Service
+: 라이프 사이클을 제어하며, Executor 인터페이스를 확장한다. 
+
 
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
@@ -30,8 +41,6 @@ public interface Executor {
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
-Executor Service
-: 라이프 사이클을 제어하며, Executor 인터페이스를 확장한다. 
 
 Executors 클래스
 : 다양한 Executor Service 인스턴스를 생성하는 Excecutor Service의  Factory 클래스.
@@ -75,6 +84,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDE4MjIxMzAsLTg1OTk2MTIzMCw1NT
-k5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbLTY1MjQzNDI0MCwtODU5OTYxMjMwLDU1OT
+kyOTExMywxMzM4OTUzNDQwXX0=
 -->
