--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -18,12 +18,9 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 Runnable 객체(태스크)의 실행을 추상 메서드 정의(execute())
 ```
 public interface Executor {
-	void execute(Runnable task);
+	void execute(Runnable task);	
 }
-interface ExecutorService extends Executor {
-	void execute(Runnable task);
-}
-
+public interface ExecutorService extends Executor { ... }
 ```
 
 
@@ -84,6 +81,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY1MjQzNDI0MCwtODU5OTYxMjMwLDU1OT
-kyOTExMywxMzM4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NT
+k5MjkxMTMsMTMzODk1MzQ0MF19
 -->
