--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -15,21 +15,6 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 자원을 효율성을 높인다. 
 
-Runnable 객체(태스크)의 실행을 추상 메서드 정의(execute())
-```
-public interface Executor {
-	void execute(Runnable task);	
-}
-public interface ExecutorService extends Executor { ... }
-```
-
-
-
-
-Executor Service
-: 라이프 사이클을 제어하며, Executor 인터페이스를 확장한다. 
-
-
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
 	- 태스크(task == Runnable 한 구현체)
@@ -39,8 +24,9 @@ Executor Service
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
 
-Executors 클래스
-: 다양한 Executor Service 인스턴스를 생성하는 Excecutor Service의  Factory 클래스.
+
+Executors
+: 다양한 Executor Service 인스턴스를 생성하는 Factory 클래스
 
 ```
 public static ExecutorService newFixedThreadPool(int nThreads);
@@ -81,6 +67,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NT
-k5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbMTE1MjkwMzc2OSwtMTQ1NjgzNzk5NCwtOD
+U5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
 -->
