--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -45,7 +45,7 @@ execService.shutdown();
 자바에서 Thread 생성은 시스템 자원이 많이 드는 연산이므로 운영체제는 애플리케이션에서 실행되는 스레드 갯수를 제한하게 된다. Thread pool을 이용함으로써 새로운 스레드를 이용하기 보다는 재사용을 하게 된다. 
 
 자바 동시성 프레임워크는 일반적인 경우에 사용하는 스레드 풀을 제공하며 이를 확장해서 쓸수 있다. 
-동시성 프레임 워크에서 제공하는 Excutor 클래스는 병렬 컴퓨팅에 추상화이고 동시에 실행될 코드를 관리할 수 있다. 이 Excutor 클래스의 인터페이스는 void execute(Runnable)이다. 모든 구현은 특정 Runnable을 실행하는 스레드를 관리할 수 있다. 
+동시성 프레임 워크에서 제공하는 Excutor 인터페이스는 execute(Runnable)를 정의한다. 
 
 Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 ExcutorService 객체를 반환한다. ExcutorService 객체는 Excutor 객체와는 달리 코드 실행을 중단시킬 수 있는 기능이 있다.
  
@@ -67,6 +67,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1MjkwMzc2OSwtMTQ1NjgzNzk5NCwtOD
+eyJoaXN0b3J5IjpbLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtOD
 U5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
 -->
