--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -23,6 +23,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
+![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
 
 
 Executors
@@ -67,6 +68,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtOD
-U5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NT
+Y4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0
+MF19
 -->
