--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -25,6 +25,10 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 ![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
 
+Customer라는건 Application에서 해당 ExecutorService를 사용하는 
+
+해당 클래스에서 ExecutorService에 작업을 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다.
+
 
 Executors
 : 다양한 Executor Service 인스턴스를 생성하는 Factory 클래스
@@ -68,7 +72,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NT
-Y4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0
-MF19
+eyJoaXN0b3J5IjpbLTQwNjIzOTcxMiwxNDg2NjEzMjUsLTM2Nj
+MzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTEx
+MywxMzM4OTUzNDQwXX0=
 -->
