--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,7 +27,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-Task는 고전적인 Runnable과 Callable
+Task에는 고전적인 Runnable과 Callable이 있다. 
 
 Task를 가진 Task Queue에서는 ThreadPool에 있는 쓰레드들이 각기 본인의 Task를 가지고 작업을 처리하기 때문에,
 
@@ -86,7 +86,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDEzMDYwNTE5LDE0ODY2MTMyNSwtMzY2Mz
+eyJoaXN0b3J5IjpbMjI2Mjk2NzIzLDE0ODY2MTMyNSwtMzY2Mz
 MwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEz
 LDEzMzg5NTM0NDBdfQ==
 -->
