--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,7 +27,9 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-Task에는 고전적인 Runnable과 Callable이 있다. Task Queue에서는 이러한 Task에 
+Task에는 고전적인 Runnable과 Callable이 있다. submit(Runnable task) {
+
+Task Queue에서는 이러한 Task에 
 
 ThreadPool에 있는 쓰레드들이 각기 본인의 Task를 가지고 작업을 처리하기 때문에,
 
@@ -86,7 +88,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzMjY4OTYxOSwxNDg2NjEzMjUsLTM2Nj
-MzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTEx
-MywxMzM4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbLTEyNDU2Nzg5NDcsMTQ4NjYxMzI1LC0zNj
+YzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5Mjkx
+MTMsMTMzODk1MzQ0MF19
 -->
