--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,9 +27,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-Task에는 고전적인 Runnable과 Callable이 있다. ExecutorService의 submit메서드 호출시 파라미터로 task를 넘기면 
-
-Task Queue에서는 이러한 Task에 
+Task에는 고전적인 Runnable과 Callable이 있다. ExecutorService의 submit메서드 호출시 파라미터로 task를 넘기면 ExcecutorService의 TaskQueue에서 해당 task를 관리하게 된다.
 
 ThreadPool에 있는 쓰레드들이 각기 본인의 Task를 가지고 작업을 처리하기 때문에,
 
@@ -88,7 +86,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzAzMTA1NjkwLDE0ODY2MTMyNSwtMzY2Mz
-MwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEz
-LDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTIyNzc4ODY2MCwxNDg2NjEzMjUsLTM2Nj
+MzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTEx
+MywxMzM4OTUzNDQwXX0=
 -->
