--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -32,7 +32,8 @@ submit 메서드를 보면 아래와 같다.
 public Future<?> submit(Runnable task) {...}
 public <T> Future<T> submit(Callable<T> task) {...}
 ```
-즉 task라는건 Runnable과 Callable 두
+Taskdml
+ Runnable과 Callable 두 가지 종류가 있다.
 
 ExecutorService의 submit메서드 호출시 파라미터로 task를 넘기면 ExcecutorService의 TaskQueue에서 해당 task를 관리하게 된다. 
 
@@ -92,7 +93,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0MjY3ODA2MywtNTgzMjcwOTEwLDE0OD
-Y2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEy
-MzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbNzAxNjgwNjU2LC01ODMyNzA5MTAsMTQ4Nj
+YxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIz
+MCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
 -->
