--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,7 +27,8 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-submit 메서드를 보면 아래와 같은데 Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다. 
+submit 메서드를 보면 아래와 같은데 Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다. Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 
+
 ```
 public Future<?> submit(Runnable task) {...}
 public <T> Future<T> submit(Callable<T> task) {...}
@@ -89,7 +90,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTg5MDEzMzI0LC01ODMyNzA5MTAsMTQ4Nj
-YxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIz
-MCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbLTExODQyNDYzNDAsLTU4MzI3MDkxMCwxND
+g2NjEzMjUsLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYx
+MjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
 -->
