--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,9 +27,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-submit 메서드를 보면 아래와 같은데 Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다. Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, 사실 Future Object를 반환한다. Future Object는 task의 생명 주기오
-
-he result of parallel processing of a task. It returns a [Future object](http://javarevisited.blogspot.com/2015/01/how-to-use-future-and-futuretask-in-Java.html), which represents the lifecycle of a task and provides methods to check if the task has been completed or canceled, retrieve the result or cancel the task.
+submit 메서드를 보면 아래와 같은데 Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다. Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 생명 주기와 그 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구한다. 
 
 ```
 public Future<?> submit(Runnable task) {...}
@@ -92,7 +90,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNDIzNTA3NiwtNTgzMjcwOTEwLDE0OD
-Y2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEy
-MzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTE3NTc2Nzg3MzUsLTU4MzI3MDkxMCwxND
+g2NjEzMjUsLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYx
+MjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
 -->
