--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -27,12 +27,13 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 
-submit 메서드를 보면 아래와 같은데 Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다. Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 생명 주기와 그 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구한다. 
-
+submit 메서드를 보면 아래와 같은데 **Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다.** 
 ```
 public Future<?> submit(Runnable task) {...}
 public <T> Future<T> submit(Callable<T> task) {...}
 ```
+Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 상태와 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구할 수 있다. 
+
 
 ExecutorService의 submit 메서드 호출시 파라미터로 task를 넘기면 ExcecutorService의 TaskQueue에서 해당 task를 관리하게 된다. 
 
@@ -90,7 +91,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTc2Nzg3MzUsLTU4MzI3MDkxMCwxND
-g2NjEzMjUsLTM2NjMzMDcwMywtMTQ1NjgzNzk5NCwtODU5OTYx
-MjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbMzYwOTYxNTIyLC01ODMyNzA5MTAsMTQ4Nj
+YxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIz
+MCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
 -->
