information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -50,8 +50,9 @@ public <T> Future<T> submit(Callable<T> task) {...}
 ```
 Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 상태와 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구할 수 있다. 
 
-Executors
-: 다양한 Executor Service 인스턴스를 생성하는 Factory 클래스
+### Executors
+
+Executor Service 인스턴스를 생성하는 Factory 클래스
 
 ```
 public static ExecutorService newFixedThreadPool(int nThreads);
@@ -67,7 +68,7 @@ execService.execute(new MyThreadTask());
 execService.shutdown();
 ```
 
-> Atomic 클래스는 무엇을 제공하는가? 
+### Atomic 클래스
 
 자바 동시성 프레임 워크에는 모든 기본 타입을 Wrapping하는 Atomic 클래스가 있다. 이 클래스들은 모든 원자 연산을 보장한다. 즉 다른 쓰레드는 **모두 메서드 호출이 완료될때까지 이 클래스의 참조가 수정되지 않는다.** 즉 Atomic한 클래스의 객체는 메서드가 값을 읽고 쓰는 동안 변경되지 않는 것을 보장해주기 때문에 synchronized 메서드가 불필요 하다. 
 
@@ -81,7 +82,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA4NDAwMTQxMCwtNTgzMjcwOTEwLDE0OD
+eyJoaXN0b3J5IjpbLTE5ODk0MjE5NiwtNTgzMjcwOTEwLDE0OD
 Y2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEy
 MzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
 -->
