--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -34,7 +34,7 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
 
-
+### ExecutorService
 
 ![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
 
@@ -82,7 +82,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODk0MjE5NiwtNTgzMjcwOTEwLDE0OD
+eyJoaXN0b3J5IjpbLTY0OTQ0MDgxMSwtNTgzMjcwOTEwLDE0OD
 Y2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEy
 MzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
 -->
