--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -13,8 +13,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 **메모리 측면에서의 효율성 있는 동시성을 위한 여러 클래스**들을 제공한다. 
 
-스레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 효율을 높인다. 
-
+쓰레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 효율을 높인다. 
 
 Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 ExcutorService 객체를 반환한다. ExcutorService 객체는 Excutor 객체와는 달리 코드 실행을 중단시킬 수 있는 기능이 있다.
  
@@ -78,7 +77,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg5Njk2NDE5LC01ODMyNzA5MTAsMTQ4Nj
-YxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIz
-MCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbMTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0OD
+Y2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEy
+MzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
 -->
