information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -15,7 +15,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 쓰레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 효율을 높인다. 
 
-동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. 모든 자바 객체는 락을 유지할 수 있는 능력이 있다. synchronized(object) 코드를 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할수 있도록 한다. 물론 이런 락에는 성능이 느려진다. 스레드는 잠겨 있는 동안 다른 작업을 기다려야 함으로 성능이 떨어진다. 그러므로 읽고 쓸 필요가 없으면 최대한 빨리 락을 해제하는 것이 좋다.
+동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. synchronized(object) 코드로 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할수 있도록 한다. 스레드는 잠겨 있는 동안 다른 작업을 기다려야 함으로 성능이 떨어진다. 그러므로 읽고 쓸 필요가 없으면 최대한 빨리 락을 해제하는 것이 좋다.
 
 -   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
@@ -73,7 +73,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzODcyMzcxNywxMDgyNzg0Mjg1LC01OD
-MyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5
-OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbNDkzNjg1NDA0LDEwODI3ODQyODUsLTU4Mz
+I3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMTQ1NjgzNzk5
+NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX0=
 -->
