information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -17,11 +17,12 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. synchronized(object) 코드로 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할 수 있도록 하면 스레드는 잠겨 있는 객체에 대해선 다른 쓰레드가 작업을 끝날때 까지 기다려야 함으로 성능이 떨어진다. 따라서 성능을 위해선 최대한 빨리 락을 해제하는 것이 좋다.
 
-### Features
+### Features Summary
 
--   쓰레드 풀 사용(무거운 쓰레드는 미리 할당 가능)
+-   쓰레드 풀 사용
+	- 무거운 쓰레드는 미리 할당 가능
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
-	- 태스크(task == Runnable 한 구현체)
+	- 태스크(Runnable, Callable)
 -   쓰레드 풀안의 쓰레드는 한번에 하나씩 여러 태스크를 실행
 -   태스크 큐를 이용한 태스크 관리
 -   Executor Service를 더이상 필요 없으면 중지
@@ -75,8 +76,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTkxNTI4NTgsMTA4Mjc4NDI4NSwtNT
-gzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3
-OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ
-==
+eyJoaXN0b3J5IjpbMTA5MTE3MTI4MywxMDgyNzg0Mjg1LC01OD
+MyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5
+OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
 -->
