information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -19,10 +19,8 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 ### Features Summary
 
--   
-
 -  쓰레드의 생성 및 관리(Thread Pool)
-	- 무거운 쓰레드는 미리 할당 가능
+	- 사용할 쓰레드를 미리 할당
 	- Task(Runnable, Callable). 태스크의 생성은 개발자가 한다. 
 -   Task 관리(Task Queue)
 
@@ -74,8 +72,8 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxNzk5NTQ0MSwxMDkxMTcxMjgzLDEwOD
-I3ODQyODUsLTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcw
-MywtMTQ1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMz
-M4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbLTExMzAyODYzMjQsMTA5MTE3MTI4MywxMD
+gyNzg0Mjg1LC01ODMyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3
+MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMT
+MzODk1MzQ0MF19
 -->
