information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -1,7 +1,6 @@
 # Introduction
 
-모든 애플리케이션은 최소한 하나의 스레드는 가지고 있어야 한다. 
-직접 스레드를 만들 수 도 있는데 새로운 스레드를 만들때 마다 코드는 해당 스레드에서 즉시 실행된다. 
+고전적인 방법으로 쓰레드 생성시 
 
 새로운 스레드를 생성할때는 새로운 Thread객체를 생성해야 한다. 이 객체는 Runnable 인터페이스의 객체를 전달받는다. 또한 Runnable 인터페이스는 public void run()이란 메세드가 있는데, **스레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.** 
 
@@ -64,9 +63,9 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NT
-U5NDA1NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQy
-ODUsLTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMT
-Q1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUz
-NDQwXX0=
+eyJoaXN0b3J5IjpbMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxND
+MyODYxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEy
+ODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMz
+Y2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5
+MTEzLDEzMzg5NTM0NDBdfQ==
 -->
