information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -1,6 +1,6 @@
 # Introduction
 
-고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **스레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  
+고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **쓰레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야
 
 Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
 
@@ -61,9 +61,10 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyMzM4MDE2MiwxMTM2MTUzMzMzLC00Nj
-I5MzY4MjMsNzE0MzI4NjEsLTExNTU1OTQwNTcsLTExMzAyODYz
-MjQsMTA5MTE3MTI4MywxMDgyNzg0Mjg1LC01ODMyNzA5MTAsMT
-Q4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2
-MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbMjA5ODkwNDE4MywtOTIzMzgwMTYyLDExMz
+YxNTMzMzMsLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NTU5NDA1
+NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQyODUsLT
+U4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMTQ1Njgz
+Nzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX
+0=
 -->
