information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -3,6 +3,14 @@
 고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **쓰레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
 
 ```
+Thread t1 = new extendsThread();
+t
+
+```
+
+The **start()** method of thread class is used to begin the execution of thread. The result of this method is two threads that are running concurrently: the current thread (which returns from the call to the start method) and the other thread (which executes its run method).
+
+```
 
 ```
 
@@ -63,10 +71,10 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM2MDQ0NDkyMSwtOTIzMzgwMTYyLDExMz
-YxNTMzMzMsLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NTU5NDA1
-NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQyODUsLT
-U4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMTQ1Njgz
-Nzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQwXX
-0=
+eyJoaXN0b3J5IjpbLTk1MDI0MSwtMzYwNDQ0OTIxLC05MjMzOD
+AxNjIsMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxNDMyODYxLC0x
+MTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMsMTA4Mj
+c4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMwNzAz
+LC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLDEzMz
+g5NTM0NDBdfQ==
 -->
