information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -3,22 +3,13 @@
 고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **쓰레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
 
 ```
-Thread t1 = new ExtendsThread(); // Thread 확장한 객체
-t1.start();
+Thread t = new ExtendsThread(); // Thread 확장한 객체
+t.start();
 ```
-
 ```
-Runnable r1 = new ImplementsThread(); // R
-Thread t1 = new Thread(); // Thread 확장한 객체
-t1.start();
-```
-
-
-
-The **start()** method of thread class is used to begin the execution of thread. The result of this method is two threads that are running concurrently: the current thread (which returns from the call to the start method) and the other thread (which executes its run method).
-
-```
-
+Runnable r = new ImplementsThread(); // Runnable 구현한 객체
+Thread t = new Thread(r);
+t.start();
 ```
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
@@ -78,10 +69,10 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTA0ODM0NjAsLTM2MDQ0NDkyMSwtOT
-IzMzgwMTYyLDExMzYxNTMzMzMsLTQ2MjkzNjgyMyw3MTQzMjg2
-MSwtMTE1NTU5NDA1NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLD
-EwODI3ODQyODUsLTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMz
-MDcwMywtMTQ1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMy
-wxMzM4OTUzNDQwXX0=
+eyJoaXN0b3J5IjpbMTI3MjQ3MDgwNSwtMzYwNDQ0OTIxLC05Mj
+MzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxNDMyODYx
+LC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMsMT
+A4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMw
+NzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLD
+EzMzg5NTM0NDBdfQ==
 -->
