information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -11,7 +11,9 @@ Thread t = new Thread(r);
 t.start();
 ```
 
-새로운 쓰레드를 만들고 ㄱ**  이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
+새로운 쓰레드를 만들고 그 쓰레드에서 구현한 run() 메서드를 수행하고 싶다면 ** run()메서드를 직접 호출하면 안된다.** 반드시 Thread. start 메서드로  쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
+
+
 
 Main difference is that when program calls **start**() method a new **Thread** is created and code inside **run**() method is executed in new **Thread** while if you call **run**() method directly no new **Thread** is created and code inside **run**() will **execute** on current **Thread**
 
@@ -72,10 +74,10 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODA0OTkyNTksMTI3MjQ3MDgwNSwtMz
-YwNDQ0OTIxLC05MjMzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2
-ODIzLDcxNDMyODYxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LD
-EwOTExNzEyODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2
-MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMz
-AsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbODY2ODEwMywxMjcyNDcwODA1LC0zNjA0ND
+Q5MjEsLTkyMzM4MDE2MiwxMTM2MTUzMzMzLC00NjI5MzY4MjMs
+NzE0MzI4NjEsLTExNTU1OTQwNTcsLTExMzAyODYzMjQsMTA5MT
+E3MTI4MywxMDgyNzg0Mjg1LC01ODMyNzA5MTAsMTQ4NjYxMzI1
+LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NT
+k5MjkxMTMsMTMzODk1MzQ0MF19
 -->
