information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -11,7 +11,11 @@ Thread t = new Thread(r);
 t.start();
 ```
 
-새로운 쓰레드를 만들고 그 쓰레드에서 구현한 run() 메서드를 수행하고 싶다면 ** run()메서드를 직접 호출하면 안된다.** 반드시 Thread. start 메서드로  쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
+새로운 쓰레드를 만들고 그 쓰레드에서 구현한 run() 메서드를 수행하고 싶다면 ** run()메서드를 직접 호출하면 안된다.** 반드시 Thread. start 메서드로  쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한 후 그 쓰레드에서 메서드를 실행한다.
+
+> start VS run
+> start 메서드를 호출하면 새로운 Thread가 생성되고 run 메서드 안의 코드는 새로운 Thread에서 실행된다. 
+> 반면에 run 메서드를 호출하면, 새로운 
 
 Main difference is that when program calls **start**() method a new **Thread** is created and code inside **run**() method is executed in new **Thread** while if you call **run**() method directly no new **Thread** is created and code inside **run**() will **execute** on current **Thread**
 
@@ -72,7 +76,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM0MDI0ODExLDg2NjgxMDMsMTI3MjQ3MD
+eyJoaXN0b3J5IjpbNzAxNDM2OTY3LDg2NjgxMDMsMTI3MjQ3MD
 gwNSwtMzYwNDQ0OTIxLC05MjMzODAxNjIsMTEzNjE1MzMzMywt
 NDYyOTM2ODIzLDcxNDMyODYxLC0xMTU1NTk0MDU3LC0xMTMwMj
 g2MzI0LDEwOTExNzEyODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEw
