information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -11,13 +11,11 @@ Thread t = new Thread(r);
 t.start();
 ```
 
-새로운 쓰레드를 만들고 그 쓰레드에서 구현한 run() 메서드를 수행하고 싶다면 ** run()메서드를 직접 호출하면 안된다.** 반드시 Thread. start 메서드로  쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한 후 그 쓰레드에서 메서드를 실행한다.
+**새로운 쓰레드를 만들고 그 쓰레드에서 구현한 run() 메서드를 수행하고 싶다면 run()메서드를 직접 호출하면 안된다.** 반드시 Thread.start 메서드로  쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한 후 그 쓰레드에서 메서드를 실행한다.
 
 > start VS run
 > start 메서드를 호출하면 새로운 Thread가 생성되고 run 메서드 안의 코드는 새로운 Thread에서 실행된다. 
-> 반면에 run 메서드를 호출하면, 새로운 
-
-Main difference is that when program calls **start**() method a new **Thread** is created and code inside **run**() method is executed in new **Thread** while if you call **run**() method directly no new **Thread** is created and code inside **run**() will **execute** on current **Thread**
+> 반면에 run 메서드를 호출하면, 새로운 Thread가 생성되지 않고 run 메서드 안의 코드는 현재 Thread에서 동작하게 된다.
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
@@ -76,10 +74,11 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzAxNDM2OTY3LDg2NjgxMDMsMTI3MjQ3MD
-gwNSwtMzYwNDQ0OTIxLC05MjMzODAxNjIsMTEzNjE1MzMzMywt
-NDYyOTM2ODIzLDcxNDMyODYxLC0xMTU1NTk0MDU3LC0xMTMwMj
-g2MzI0LDEwOTExNzEyODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEw
-LDE0ODY2MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NT
-k5NjEyMzAsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbNzM1MTgwODQ4LDcwMTQzNjk2Nyw4NjY4MT
+AzLDEyNzI0NzA4MDUsLTM2MDQ0NDkyMSwtOTIzMzgwMTYyLDEx
+MzYxNTMzMzMsLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NTU5ND
+A1NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQyODUs
+LTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMTQ1Nj
+gzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQw
+XX0=
 -->
