information-technology/programming-language/java/멀티쓰레드.md updated from https://stackedit.io/

--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -17,7 +17,7 @@ t.start();
 > start 메서드를 호출하면 새로운 Thread가 생성되고 run 메서드 안의 코드는 새로운 Thread에서 실행된다. 
 > 반면에 run 메서드를 호출하면, 새로운 Thread가 생성되지 않고 run 메서드 안의 코드는 현재 Thread에서 동작하게 된다.
 
-Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
+Thread 클래스는 병렬 실행이 가능한 쓰레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
 ## Executor Framework
 
@@ -39,21 +39,16 @@ public <T> Future<T> submit(Callable<T> task) {...}
 ```
 Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 상태와 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구할 수 있다. 
 
-구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다. 작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
+구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 쓰레드가 맡아 처리한다. 작업 처리가 끝난 쓰레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
   
-
-### Executors
-
-Executor Service 인스턴스를 생성하는 Factory 클래스
-
+Executors
+: Executor Service 인스턴스를 생성하는 Factory 클래스
 ```
 public static ExecutorService newFixedThreadPool(int nThreads);
 public static ExecutorService newCachedThreadPool();
 public static ExecutorService newSingleThreadExecutor();
 public static ExecutorService newSingleThreadScheduledExecutor();
-```
-예제
-```
+... 
 ExecutorService execService = Executors.newFixedThreadPool(2); 
 execService.execute(new MyThreadTask());
 execService.execute(new MyThreadTask());
@@ -66,7 +61,7 @@ execService.shutdown();
 
 >왜 불변 객체를 써야하는가? 
 
-불변객체는 값이 변하지 않기 때문에 스레드에서 락을 사용하지 않아도 된다. 이는 동기화된 코드 블록 사이에서 값 하나를 이용할 수 있을때까지 대기하는 시간을 아낄 수 있다는 말이다.  불변 객체의 값을 수정해야할 경우 수정된 새로운 객체를 만들어야 한다. 
+불변객체는 값이 변하지 않기 때문에 쓰레드에서 락을 사용하지 않아도 된다. 이는 동기화된 코드 블록 사이에서 값 하나를 이용할 수 있을때까지 대기하는 시간을 아낄 수 있다는 말이다.  불변 객체의 값을 수정해야할 경우 수정된 새로운 객체를 만들어야 한다. 
 
 
 
@@ -74,11 +69,11 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzM1MTgwODQ4LDcwMTQzNjk2Nyw4NjY4MT
-AzLDEyNzI0NzA4MDUsLTM2MDQ0NDkyMSwtOTIzMzgwMTYyLDEx
-MzYxNTMzMzMsLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NTU5ND
-A1NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQyODUs
-LTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMTQ1Nj
-gzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUzNDQw
+eyJoaXN0b3J5IjpbMjE0MTM1NjY0MSw3MzUxODA4NDgsNzAxND
+M2OTY3LDg2NjgxMDMsMTI3MjQ3MDgwNSwtMzYwNDQ0OTIxLC05
+MjMzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxNDMyOD
+YxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMs
+MTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2Mz
+MwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEz
 XX0=
 -->
