algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -10,10 +10,13 @@
 더 간결한 코드 
 : 다양한 집합 연산들을 반목문 없이 한 줄에 쓰기 때문에 적절히 사용하면 짧은 코드를 작성할 수 있다. 
 
+더 작은 메모리 사용
+: 비트마스크 같은 코드를 이용하면 같은 데이터를 더 적은 메모리에 
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2NTU5ODQ4MCw5OTk5OTA2MTMsLTE2Mz
-c5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbLTE5MzY0MjA4NzAsMTg2NTU5ODQ4MCw5OT
+k5OTA2MTMsLTE2Mzc5NTgzMTJdfQ==
 -->
