algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -16,12 +16,13 @@
 
 ## 비트마스크 사용법
 
+### 비트 연산자
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODYwNjU0NTEwLDE4NjU1OTg0ODAsOTk5OT
-kwNjEzLC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbLTM0MzgyMDcwOSwxODY1NTk4NDgwLDk5OT
+k5MDYxMywtMTYzNzk1ODMxMl19
 -->
