algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -21,10 +21,95 @@
 
 ![enter image description here](https://lh3.googleusercontent.com/proxy/q2jrYrA9rjj-TgLZeL6RMbq9RGKuo1E_ws3N_K1GO6iJP4iW40e5wrmiafZWGmNkuZ4KJfA9n5vRQaWl9tuXO1VEXPLr-C-V72qPgVmrAOQhpzBJ7Wf9cawRZxDziEc0a9yaqqyjtD8bDUBfOwzk3IRxew)
 
+### 시프트 연산자
 
+비트 열을 좌우로 지시한 만큼 이동시키는(shift) 연산자를 말합니다.
+
+본문 처음에 말했듯이, C/C++ 에는 >> 와 << 만 존재하지만, 자바에는 추가적으로 '>>>' 연산자가 있습니다.
+
+  
+
+#### 1. 왼쪽 시프트 연산자 <<
+
+ex) 150 << 2
+
+150 의 이진값을 왼쪽으로 2칸 시프트 합니다.
+
+1 0 0 1 0 1 1 0 : 150
+
+1 0 0 1 0 1 1 0 0 0 : 600
+
+  
+
+위와 같은 결과. 왼쪽으로 두칸 밀면서, 비게 되는 오른쪽 두칸은 0으로 채웁니다.
+
+만약 데이터를 담는 자료형이 byte 타입이었다면, (8bit) 왼쪽으로 밀린 2개의 비트는 삭제됩니다.
+
+  
+
+그런 경우 다음과 같은 결과가 됩니다
+
+0 1 0 1 1 0 0 0 : 88
+
+  
+
+#### 2. 오른쪽 시프트 연산자 >>
+
+ex) 150 >> 2
+
+150의 이진값을 오른쪽으로 2칸 시프트 합니다.
+
+  
+
+1 0 0 1 0 1 1 0
+
+1 1 1 0 0 1 0 1 1 0
+
+  
+
+오른쪽으로 2비트 이동 한 후, 비게되는 왼쪽의 2개비트는 1로 채워지고, 오른쪽에서 2비트 넘어간 부분은 삭제됩니다.
+
+따라서 결과는 아래가 됩니다.
+
+1 1 1 0 0 1 0 1
+
+  
+
+주의점 : 무조건 왼쪽에 비는 부분이 1로 채워지는 것이 아닙니다. -> 밀기전 최초 첫째짜리 값(MSB)과 동일한 값으로 채워집니다.
+
+  
+
+  
+
+#### 3. 논리 오른쪽 시프트 연산자 >>>
+
+150 >>> 2
+
+오른쪽으로 2비트 시프트 합니다.
+
+  
+
+자바에 추가된 논리 시프트는 오른족으로 밀면서 비게되는 앞쪽 비트를 무조건 0으로 채워넣는 것이다.
+
+  
+
+1 0 0 1 0 1 1 0
+
+0 0 1 0 0 1 0 1 1 0
+
+  
+
+으로 되는 것. 비게 되는 왼쪽 2비트가 무조건 0 으로 채워집니다.
+
+밀려난 오른쪽 2개비트 1 0 은 삭제됩니다.
+
+  
+  
+출처: [https://techlog.gurucat.net/157](https://techlog.gurucat.net/157) [하얀쿠아의 이것저것 만들기 Blog]
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxNTM0MjgyMywtMzQzODIwNzA5LDE4Nj
-U1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbLTE0MzU1MDU2MDYsLTcxNTM0MjgyMywtMz
+QzODIwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEzLC0xNjM3OTU4
+MzEyXX0=
 -->
