algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -42,16 +42,11 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 1 0 0 1 0 1 1 0
 1 1 1 0 0 1 0 1 1 0
 
-오른쪽으로 2비트 이동 한 후, 비게되는 왼쪽의 2개 비트는 1로 채워지고, 오른쪽에서 2비트 넘어간 부분은 삭제된다. 마찬가지로 8bit가 제한이라면
-
-따라서 결과는 아래가 됩니다.
+오른쪽으로 2비트 이동 한 후, 비게되는 왼쪽의 2개 비트는 1로 채워지고, 오른쪽에서 2비트 넘어간 부분은 삭제된다. 마찬가지로 8bit가 제한이라면 아래 결과가 나온다.
 
 1 1 1 0 0 1 0 1
 
-  
-
-주의점 : 무조건 왼쪽에 비는 부분이 1로 채워지는 것이 아닙니다. -> 밀기전 최초 첫째짜리 값(MSB)과 동일한 값으로 채워집니다.
-
+주의점 : 무조건 왼쪽에 비는 부분이 1로 채워지는 것이 아니라 비트 연산을 하기전에 최상위 비트(M의 값으로 채워진다. 
   
 
   
@@ -84,7 +79,7 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk2NDczNTc2MywyMjA2NzY2MCwtNzE1Mz
-QyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMs
-LTE2Mzc5NTgzMTJdfQ==
+eyJoaXN0b3J5IjpbLTEyOTEwMTQ2NTgsMjIwNjc2NjAsLTcxNT
+M0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEz
+LC0xNjM3OTU4MzEyXX0=
 -->
