algorithms/비트마스크.md updated from https://stackedit.io/

--- a/algorithms/비트마스크.md
+++ b/algorithms/비트마스크.md
@@ -46,20 +46,13 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 1 1 1 0 0 1 0 1
 
-주의점 : 무조건 왼쪽에 비는 부분이 1로 채워지는 것이 아니라 비트 연산을 하기전에 최상위 비트(M의 값으로 채워진다. 
+주의점 : 무조건 왼쪽에 비는 부분이 1로 채워지는 것이 아니라 비트 연산을 하기전에 최상위 비트(MSB; most significant bit)의 값으로 채워진다. 
   
+#### 논리 오른쪽 시프트 연산자 >>>
 
-  
+150 >>> 2; 오른쪽으로 2비트 시프트 합니다.
 
-#### 3. 논리 오른쪽 시프트 연산자 >>>
-
-150 >>> 2
-
-오른쪽으로 2비트 시프트 합니다.
-
-  
-
-자바에 추가된 논리 시프트는 오른족으로 밀면서 비게되는 앞쪽 비트를 무조건 0으로 채워넣는 것이다.
+자바에 추가된 논리 시프트는 오른쪽으로 밀면서 비게되는 앞쪽 비트를 무조건 0으로 채워넣는 것이다.
 
   
 
@@ -79,7 +72,7 @@ ex) 150 >> 2; 150의 이진값을 오른쪽으로 2칸 시프트 합니다.
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyOTEwMTQ2NTgsMjIwNjc2NjAsLTcxNT
-M0MjgyMywtMzQzODIwNzA5LDE4NjU1OTg0ODAsOTk5OTkwNjEz
-LC0xNjM3OTU4MzEyXX0=
+eyJoaXN0b3J5IjpbLTgyNzc0MjAyNCwyMjA2NzY2MCwtNzE1Mz
+QyODIzLC0zNDM4MjA3MDksMTg2NTU5ODQ4MCw5OTk5OTA2MTMs
+LTE2Mzc5NTgzMTJdfQ==
 -->
